[gd_scene load_steps=4 format=3 uid="uid://bt45ap1aaxjfr"]

[ext_resource type="Script" path="res://algebra/expression_controller.gd" id="1_rqufd"]
[ext_resource type="Script" path="res://algebra/expression_selector.gd" id="2_m3xpi"]
[ext_resource type="Script" path="res://algebra/expressions_menu_selector.gd" id="3_deu35"]

[node name="ExpressionController" type="Node2D"]
script = ExtResource("1_rqufd")

[node name="ExpressionSelector" type="Node" parent="."]
script = ExtResource("2_m3xpi")

[node name="ExpressionsMenuSelector" type="Node" parent="."]
script = ExtResource("3_deu35")

[connection signal="mark_updated" from="ExpressionSelector" to="." method="_on_expression_selector_mark_updated"]
[connection signal="selected" from="ExpressionSelector" to="." method="_on_expression_selector_selected"]
[connection signal="selected" from="ExpressionsMenuSelector" to="." method="_on_expressions_menu_selector_selected"]
